# xeno-engine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  report.org  setup.sh
examples/: CMakeLists.txt  README.md  SDLauxilary.h  common.cpp  common.hpp  example-main.cpp  fragment_shaders.cpp  main.cpp  utilities.cpp  utilities.hpp
examples/cornell-box/: CMakeLists.txt  SDLauxilary.h  cornell-box.cpp  cornell-box.hpp  main.cpp  mesh.cpp  mesh.hpp  testModel.cpp  testModel.hpp
examples/dynamic-reload/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
examples/introspection/: CMakeLists.txt  main.cpp
examples/line-test/: CMakeLists.txt  line-test.cpp  main.cpp
examples/post-processing/: CMakeLists.txt  main.cpp
examples/quicktest/: CMakeLists.txt  Camera3d.cpp  Camera3d.hpp  main.cpp  quicktest.cpp  utilities.cpp  utilities.hpp
examples/raytracer-test/: CMakeLists.txt  main.cpp  testModel.hpp
examples/sphere/: CMakeLists.txt  main.cpp
examples/starfield/: CMakeLists.txt  SDLauxilary.h  main.cpp  starfield.cpp  testModel.hpp
examples/texture-test/: CMakeLists.txt  main.cpp
examples/torus/: CMakeLists.txt  fragment_shaders.cpp  main.cpp  torus.cpp
examples/triangle-test/: CMakeLists.txt  main.cpp  triangle-test.cpp
examples/unit_tests/: CMakeLists.txt  main.cpp
examples/unit_tests/math/: Quaternion.cpp
extlibs/: .gitignore  CMakeLists.txt  readme.md
source/: CMakeLists.txt  Camera3d.cpp  Camera3d.hpp  README.md  README.org  main.cpp  sources.cmake  tinyobj_loader_c.h  utilities.cpp  xen_sources.cmake
source/core/: README.org  intrinsics.hpp  memory.hpp  sources.cmake
source/core/memory/: Allocator.cpp  Allocator.hpp  utilities.hpp
source/core/src/: File.cpp  File.unix.cpp  File.win.cpp  String.cpp  StringBuffer.cpp  introspection.cpp  random.cpp  time.cpp  time.unix.cpp  time.win.cpp
source/graphics/: README.org  sources.cmake
source/graphics/impl/: README.org
source/graphics/src/: Camera3d.cpp  Color.cpp  GraphicsDevice.cpp  GraphicsModuleApi.cpp  Image.cpp  Mesh.cpp  Mesh_types.cpp  ModuleApiGraphics.cpp  TestMeshes.cpp  Window.cpp  Window.unix.cpp  window.win.cpp
source/kernel/: README.org  sources.cmake
source/kernel/src/: DynamicLibrary.cpp  DynamicLibrary.hxx  DynamicLibrary.unix.cpp  DynamicLibrary.unix.hxx  DynamicLibrary.win.cpp  DynamicLibrary.win.hxx  Kernel.cpp  Kernel.hxx  Kernel.unix.cpp  Kernel.unix.hxx  Kernel.win.cpp  Kernel.win.hxx  TickWork.cpp  TickWork.dummy.cpp  TickWork.dummy.hxx  TickWork.hxx  TickWork.unix.cpp  TickWork.unix.hxx  WorkQueue.cpp  WorkQueue.dummy.cpp  WorkQueue.dummy.hxx  WorkQueue.hxx  log.cpp  log.dummy.cpp  log.hxx  log.unix.cpp  signal_handler.unix.cpp  threads.cpp  threads.dummy.cpp  threads.dummy.hxx  threads.hxx  threads.unix.cpp  threads.unix.hxx
source/math/: sources.cmake
source/math/src/: quaternion.cpp
source/metagen/: .gitignore  Ast.hs  Main.hs  Parser.hs  UnitTests.hs  metagen  metagen.cabal
source/module-gl/: sources.cmake
source/module-gl/src/: GlDevice.cpp  Material.cpp  Material.hxx  Mesh.cpp  Mesh.hxx  ModuleGl.cpp  ModuleGl.hxx  RenderTarget.cpp  RenderTarget.hxx  RenderTarget.unix.cpp  RenderTarget.win.cpp  Shader.cpp  Shader.hxx  Texture.cpp  Texture.hxx  Window.cpp  Window.hxx  gl_header.hxx  render.cpp  render.hxx
source/module-sren/: sources.cmake
source/module-sren-atom/: sources.cmake
source/module-sren-atom/src/: AtomTracerDebugDevice.cpp  AtomTracerDevice.cpp  ModuleAtom.cpp  atomtracer.cpp  atomtracer.hxx
source/module-sren-rasterize/: sources.cmake
source/module-sren-rasterize/src/: Mesh.cpp  Mesh.hxx  MeshImpl.cpp  ModuleCommon.cpp  ModuleRasterize.cpp  ModuleRasterize.hxx  RasterizerDevice.cpp  RenderTarget.cpp  RenderTarget.hxx  Shader.cpp  Shader.hxx  Texture.cpp  Texture.hxx  render.cpp  render.hxx
source/module-sren-raytrace/: sources.cmake
source/module-sren-raytrace/src/: ModuleRaytrace.cpp  RaytracerDebugDevice.cpp  RaytracerDevice.cpp  RaytracerDevice.hxx  raytracer3d.cpp  raytracer3d.hxx
source/module-sren/src/: AtomTracerDebugDevice.cpp  AtomTracerDevice.cpp  FragmentShader.cpp  Framebuffer.cpp  MeshStore.hxx  ModuleSren.cpp  ModuleSren.hxx  RasterizerDevice.cpp  RaytracerDebugDevice.cpp  RaytracerDevice.cpp  RaytracerDevice.hxx  RenderTargetImpl.cpp  RenderTargetImpl.hxx  RenderTargetImpl.unix.cpp  RenderTargetImpl.unix.hxx  RenderTargetImpl.win.cpp  RenderTargetImpl.win.hxx  SoftwareDeviceBase.cpp  SoftwareDeviceBase.hxx  Texture.cpp  atomtracer.cpp  atomtracer.hxx  rasterizer3d.cpp  rasterizer3d.hxx  raytracer3d.cpp  raytracer3d.hxx  render-utilities.cpp  render-utilities.hxx
source/module-window/: sources.cmake
source/module-window/src/: common.cpp  common.hxx  platform.dummy.cpp  platform.hxx  platform.unix.cpp  platform.win.cpp  unix.cpp  win.cpp
source/sren/: README.org  sources.cmake
source/sren/src/: FragmentShader.cpp  Framebuffer.cpp  RenderTarget.cpp  RenderTarget.unix.cpp  RenderTarget.win.cpp  SoftwareDeviceBase.cpp  Texture.cpp  rasterizer3d.cpp  render-debug.cpp
source/xen/: config.hpp  windows_header.hxx
source/xen/core/: File.cpp  array.hpp  array_types.hpp  bits.hpp  bits_types.hpp  intrinsics.hpp  memory.hpp  random.cpp  random.hpp  time.cpp  time.hpp  time.unix.cpp  time.win.cpp
source/xen/gl/: GlDevice.cpp  GlDevice.hpp  Mesh.cpp  Mesh.hpp  Mesh.hxx  RenderTarget.unix.cpp  RenderTarget.win.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture.hxx  gl_header.hxx
source/xen/graphics/: Camera3d.cpp  Camera3d.hpp  Color.cpp  Color.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  Image.cpp  (+26 more)
tests/: CMakeLists.txt  README.md  html_reporter.hpp  main.cpp
tests/core/: ArenaPool.cpp  RingBuffer.cpp  RollingArray.cpp  String.cpp  StringBuffer.cpp  array.cpp  bits.cpp  minmax.cpp  ring_buffer.cpp
tests/extlibs/: catch.hpp
tests/graphics/: Camera.cpp  Image.cpp  ostream_operators.hpp
tests/math/: Aabb.cpp  Angle.cpp  LineSegment.cpp  Matrix.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  RayTracing.cpp  Rotation3d.cpp  Triangle.cpp  Vector.cpp  aabb.cpp  latlong.cpp  ostream_operators.hpp  utilities.cpp
(+204 files in other folders)
